// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Lexer addRule method should match snapshot 1`] = `
Lexer {
  "column": 1,
  "index": 0,
  "input": "",
  "line": 1,
  "rules": Array [
    Rule {
      "begin": Array [],
      "fn": undefined,
      "regex": /\\\\n/gmu,
      "type": "newline",
    },
  ],
  "state": State {
    "consumed": "",
    "input": "",
    "remaining": "",
    "tokens": Array [],
  },
}
`;

exports[`Lexer setInput method should match snapshot 1`] = `
Lexer {
  "column": 1,
  "index": 0,
  "input": "some random input string",
  "line": 1,
  "rules": Array [],
  "state": State {
    "consumed": "",
    "input": "",
    "remaining": "",
    "tokens": Array [],
  },
}
`;

exports[`Lexer should match snapshot 1`] = `
Lexer {
  "column": 1,
  "index": 0,
  "input": "random string of random strings",
  "line": 1,
  "rules": Array [],
  "state": State {
    "consumed": "",
    "input": "",
    "remaining": "",
    "tokens": Array [],
  },
}
`;
